Fix handling of divider_color admin setting
This commit changes the handling of the divider_color setting to
set the root CSS variable instead of setting the CSS variable as
an inline style. This commit also includes some minor changes
listed below.

- Fix layout issues with form labels
- Fix Block design page padding.
- Hide Bootstrap Slider tooltip.

modified: css/base/layout.css
modified: css/base/typography.css
modified: css/base/variables.css
modified: css/dxpr-theme.admin.themesettings.css
modified: js/dist/dxpr-theme-settings.admin.js
modified: js/minified/dxpr-theme-settings.admin.min.js
modified: scss/base/layout.scss
modified: scss/base/typography.scss
modified: scss/base/variables.scss
modified: scss/dxpr-theme.admin.themesettings.scss

--- a/scss/dxpr-theme.admin.themesettings.scss
+++ b/scss/dxpr-theme.admin.themesettings.scss
@@ -93,7 +93,7 @@ $border-color: #222330;
       opacity: .7;
     }
   }
-  label,
+  label:not(.option),
   legend {
     width: 200px;
     float: left;
